# diabetes-dashboard

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  commits_backup.txt  docker-compose.yml  flask_app.py  preload.py  pyproject.toml  requirements.txt
cache/: diabetes-dice-tabular.pkl  diabetes-mega-explainer-tabular.pkl  scientific_info.txt
configs/: diabetes-config.gin
explain/: chat_history_manager.py  conversation.py  counterfactual_generator.py  counterfactual_generator_old.py  counterfactual_ranker.py  explanation.py  explanation_old_.py  external_chatbot_answers.py  feature_interaction.py  feature_range_explainer.py  logic.py  parser.py  prompts.py  sample_prompts_by_action.py  scientific_explanations.py  scientific_info.py  similar_prediction_explainer.py  tmp.py  utils.py
explain/actions/: data_summary.py  explanation.py  filter.py  followup old.py  followup.py  important old.py  important older.py  important.py  interaction_effects.py  mistakes.py  show_data.py  utils.py
explain/mega_explainer/: explainer.py  lime_explainer.py
parsing/t5/: get_data_set.py  t5_inference.py
prompt_redirection/: combined_prompts.txt  extract_prompts.py  semantic_matching.py
prompt_redirection/prompts/: filter_fillers.txt
prompt_redirection/prompts/dynamic/: cfe_prompts.txt  comparisons.txt  count_data_points_prompts.txt  dataset_description.txt  explanation_prompts.txt  from_reza__feature_range.txt  (+11 more)
prompt_redirection/semantic_matcher/: config.json  embeddings.pkl  state.json  tokenizer_config.json
templates/: index.html  index_org.html  test.html
(+52 files in other folders)
